--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -6,5 +6,5 @@
   Ingredients: <input type="text" value="<%=@recipe.ingredients%>" name="ingredients"><br>
   Cook Time: <input type="text" value="<%=@recipe.cook_time%>" name="cook_time"><br>
   <input type="submit" value="submit">
-  <%binding.pry%>
+  #<%binding.pry%>
 </form>
