--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -4,4 +4,5 @@
 Ingredients: <%=@recipe.ingredients%><br>
 Cook Time: <%=@recipe.cook_time%><br>
 <a href="/recipes/<%=@recipe.id%>/delete">Delete here</a><br>
+<input type="submit" value="delete">
 <input id="hidden" type="hidden" name="_method" value="delete">
